--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "CommandService": "http://localhost:5248/api/c/platforms"
 }
